[tool.poetry]
name = "hue_bridge_controller"
version = "0.1.0"
description = "Python module to control local Hue Bridge"
authors = ["carbonarok <carbonarok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
pydantic = "^1.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
pydocstyle = "^5.1.1"
pytest = "^6.2.2"
flake8 = "^3.8.4"
bandit = "^1.7.0"
invoke = "^1.5.0"

[tool.poetry.scripts]
hue = 'hue_bridge_controller.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
